<resources>
    <string name="app_name">9-1-1 QR</string>
    <string name="scan">QR Code</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_sinstructor">Lookup Instructor</string>
    <string name="action_course">Lookup Course</string>
    <string name="title_activity_activity_add_course">Add Course</string>
    <string name="title_start_class">Start Course</string>
    <string name="add_student">Add Student</string>
    <string name='add_instructor'>Add Instructor</string>
    <string name="hello_world">Hello world!</string>
</resources>
